--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Werkzeug==3.0.1
 groq==0.4.1
 faiss-cpu==1.9.0.post1
 sentence-transformers==2.2.2
-PyMuPDF==1.23.8
+pdfplumber==0.11.4
 requests==2.31.0
 duckduckgo-search==3.9.6
 numpy==1.24.3
@@ -11,4 +11,5 @@ torch==2.1.0
 transformers==4.35.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
+
 
