--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.0.0
 Werkzeug==3.0.1
-groq==0.32.0
+httpx==0.27.0
+groq==0.4.1
 faiss-cpu==1.7.4
 sentence-transformers==2.2.2
 pdfplumber==0.11.4
@@ -11,6 +12,7 @@ torch==2.1.0
 transformers==4.35.0
 python-dotenv==1.0.0
 gunicorn>=22.0.0
+
 
 
 
