--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,11 @@ pdfplumber==0.11.4
 requests==2.31.0
 duckduckgo-search==3.9.6
 numpy==1.24.3
-torch==2.1.0
+torch==2.1.0+cpu
 transformers==4.35.0
 python-dotenv==1.0.0
 gunicorn>=22.0.0
+gevent==23.9.1
 
 
 
